# data-engineer-with-agno

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: check-data.md  diagnose.md  run-dashboard.md  run-pipeline.md
app/agent/: __init__.py  agent.py  tools.py
app/dashboard/: main.py  queries.py
challenges/: README.md
docs/: README.md
docs/01-business/: 01-visao-estrategica.md  02-personas.md  03-kpis-e-metricas.md  04-jornada-do-cliente.md
docs/02-product/: 01-dados-disponiveis.md  02-perguntas-da-analise.md  03-deliverables.md  04-playbook-cs.md
docs/03-engineering/: 01-stack-tecnico.md  02-arquitetura-medalhao.md  03-modelo-de-dados.md  04-adr-001-medallion-duckdb.md  05-adr-002-agno-agent.md  06-estrutura-do-projeto.md
pipeline/bronze/: run_bronze.py
pipeline/gold/: run_gold.py
pipeline/silver/: run_silver.py
templates/: submission-template.md
