[project]
name = "ai-master-challenge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.0",
    "agno>=1.4.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
    "statsmodels>=0.14.6",
    "matplotlib>=3.10.8",
]
